--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --main-text: #333;
     --navbar-bg: #080808;
     --link-color: #d6cfcf;
-    --accent: #6c93ff;
+    --accent: #132D46;
     --accent-hover: #01c38D;
     --overlay-bg: rgba(0, 0, 0, 0.6);
   }
